# auto-compile-and-run

./: CMakeLists.txt  README.MD  README.md  c_make.cpp  compile.cpp  compile.h  file_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  runbotton.cpp  runbotton.h
SourceCode/: CMakeLists.txt  compiler.cpp  compiler.h  historyruler.cpp  historyruler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  terminalwindow.cpp  terminalwindow.h
